# smoltrain

./: .gitignore  Cargo.toml  README.md  SMOLROUTE_SPEC.md  pyproject.toml  smoltrain.toml  taxonomy.yaml
.claude/skills/smoltrain-build/: SKILL.md
.claude/skills/smoltrain-build/scripts/: scaffold.sh
data/: dataset.jsonl  eval_full.jsonl  eval_raw.jsonl  naturalized.jsonl  naturalized_eval.jsonl  train_full.jsonl  world.json
models/: charcnn_dummy.onnx  charcnn_trained.onnx  charcnn_trained.onnx.data  charcnn_trained.pt
scripts/: bench_tokspeed.sh  export.py  naturalizer_local.sh  serve_27b_dflash.sh  serve_4b_dflash.sh  serve_9b_dflash.sh  serve_9b_mlx.sh  train.py
smoltrain/: __init__.py  benchmark.py  classify.py  cli.py  config.py  eval.py  expander.py  export.py  gen.py  model.py  naturalizer.py  pipeline.py  serve.py  train.py  world_builder.py
smoltrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: config.rs  lib.rs  llm_backend.rs  main.rs
src/classify/: mod.rs  onnx.rs
src/eval/: mod.rs
src/export/: mod.rs
src/serve/: classifier.rs  mod.rs
src/train/: mod.rs
