[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smoltrain"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "toml>=0.10",
    "transformers>=4.40",
    "torch>=2.0",
    "datasets>=2.0",
    "onnx>=1.14",
    "onnxruntime>=1.17",
    "onnxruntime-tools>=1.7",
    "optimum[onnxruntime]>=1.17",
    "requests>=2.28",
    "evaluate>=0.4",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.scripts]
smoltrain = "smoltrain.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smoltrain*"]
